Fixed button styling on iOS devices and added an option to add a separate featured image for a page. Also added an option to hide the header social bar on mobile devices on per page basis.

--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -333,6 +333,7 @@ textarea {
 	color: #1a1a1a;
 	line-height: normal;
 	outline: none;
+	-webkit-appearance: none;
 }
 
 select {
@@ -5470,6 +5471,10 @@ body.page-template-regular {
 }
 
 @media screen and (max-width: 640px) {
+
+	.hide-on-mobile {
+		display: none;
+	}
 
 	#floating-popup {
 
